--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ logging:
 spring:
   rabbitmq: 
     addresses: 192.168.58.144:5672
-    username: test666
-    password: 123456  
+    username: admin
+    password: nmamtf  
     publisherConfirms: true
     queueName: testQueue
     keys:
